fix: rejig of login form for responsive display on mobile

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -177,7 +177,8 @@ body {
   height: 15rem;
 }
 
-.misdemeanour {
+.misdemeanour-self {
+  background-color: #ff9800;
   /* display: flex;
   flex-direction: row;
   justify-content: space-evenly; */
@@ -213,38 +214,35 @@ body {
   height: auto;
 }
 
-.form-container {
+
+
+
+
+
+.login-form-container {
   /* font-family: sans-serif; */
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 20px;
+  
+  /* gap: 20px;*/
   height: 100vh;
   /* font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; */
-  background-color: var(--lighter-grey);
+  background-color: black;
   /* background-color: #f8f9fd; */
 }
 
 input[type="text"],
 input[type="password"] {
-  height: 25px;
-  /* width: 50px; */
-  /* border: 1px solid green; */
-  /* border: 1px solid rgba(0, 0, 0, 0.2); */
+  height: 25px; 
 }
 
 input[type="submit"] {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   font-family: "Ubuntu", sans-serif;
-  /* margin-top: 10px; */
   cursor: pointer;
-  /* font-size: 15px; */
-  /* background: #01d28e;
-  border: 1px solid #01d28e; */
-  /* color: #fff; */
-  /* padding: 10px 20px; */
 }
 
 input[type="submit"]:hover {
@@ -265,15 +263,17 @@ input[type="submit"]:hover {
 }
 
 .login-svg {
-  font-size: 1.75rem;
-  /* width: 400px; */
+  font-size: 1.85rem;
+  width: 100%;
 }
 
 .login-form {
+  background-color: black;
+  /* height: 100%; */
   /* background-color: white; */
   /* width: 320px; */
   padding: 2rem;
-  box-shadow: 0px 5px 10px 0px paleturquoise;
+  /* box-shadow: 0px 5px 10px 0px paleturquoise; */
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
@@ -285,23 +285,23 @@ input[type="submit"]:hover {
 }
 
 .login-badge {
-  width: 8rem;
+  width: 10rem;
   height: auto;
 }
 
-.list-container {
+/* .list-container {
   display: flex;
-}
+} */
 
-.error {
+/* .error {
   color: red;
   font-size: 12px;
-}
+} */
 
-.title {
+/* .title {
   font-size: 25px;
   margin-bottom: 20px;
-}
+} */
 
 .input-container {
   display: flex;
@@ -313,6 +313,8 @@ input[type="submit"]:hover {
 .input-container__input {
   padding-top: 0.2rem;
 }
+
+
 
 #confession-message--error,
 #confession-message--just-talk,
@@ -426,6 +428,29 @@ p {
     padding-top: 0;
   }
 
+
+  .login-form-container {
+    /* font-family: sans-serif; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    height: 100vh;
+    /* font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; */
+    background-color: var(--lighter-grey);
+    /* background-color: #f8f9fd; */
+  }
+
+  .login-form {
+    background-color: black;
+    /* width: 320px; */
+    padding: 2rem;
+    box-shadow: 0px 5px 10px 0px paleturquoise;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  }
+
   .main {
     padding-top: 5rem;
     flex-grow: 1;
@@ -449,7 +474,7 @@ p {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
-    flex-direction: row wrap;
+    flex-direction: row;
     font-size: 1.5rem;
     align-self: center;
   }
@@ -599,6 +624,11 @@ p {
   .misdemeanours-table th:last-of-type,
   .misdemeanours-table td:last-of-type {
     border: none;
+    padding-right: 0.5rem;
+  }
+  .misdemeanours-table th:first-of-type,
+  .misdemeanours-table td:first-of-type {
+    padding-left: 0.5rem;
   }
 
   .punish-image {
